feat: Implement Battleship game logic and UI enhancements
- Added game status management with constants for in-progress and game over states.
- Created Player class to handle player actions, including shooting and ship management.
- Introduced Ship class to represent individual ships and their states.
- Established game settings, including grid dimensions and ship sizes.
- Enhanced client-side JavaScript for socket communication and game state updates.
- Improved UI with CSS styling for better user experience and responsiveness.
- Updated HTML structure for clarity and added loading animations.
- Implemented chat functionality for players to communicate during the game.
- Added a test HTML page for Socket.IO connection verification.
- Refactored server-side logic to manage game sessions and player interactions.

--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Sea Wars - Battleship Game</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A multiplayer Battleship game built with Node.js and Socket.io"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Destroy Ship to Win</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="row vertical-center-row">
         <div class="col-md-12">
-          <div class="disconnected">
+          <!-- Disconnected from server -->
+          <div id="disconnected">
             <div class="row">
               <div class="col-sm-4 col-sm-offset-4 text-center">
                 <div class="alert alert-danger">
-                  <p>Not Connected to Server.</p>
+                  <p>❌ Not connected to server. Please refresh the page.</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- waiting room -->
+          <!-- Waiting room -->
           <div id="waiting-room" style="display: none">
             <div class="row">
               <div class="col-sm-4 col-sm-offset-4 text-center">
                 <div class="panel panel-primary">
-                  <div class="panel-heading">Waiting Room</div>
+                  <div class="panel-heading">⚓ Waiting Room</div>
                   <div class="panel-body">
-                    <p>You are connected to the server...</p>
-                    <p>Waiting for another player...</p>
+                    <p>🌊 You are connected to the server.</p>
+                    <p>⏳ Waiting for another player to join the battle...</p>
                   </div>
                 </div>
               </div>
@@ -45,33 +50,39 @@
               <div class="col-md-12">
                 <div class="panel panel-primary">
                   <div class="panel-heading">
-                    Battle Rubber Ducks Game # <span id="game-number"></span>
+                    🎯 Sea Wars - Battle #<span id="game-number"></span>
                   </div>
                   <div class="panel-body">
-                    <!-- Player Grid -->
+                    <!-- Player grids -->
                     <div class="row">
                       <div class="col-md-6 player-grid text-center">
-                        <h3>You</h3>
+                        <h3>🛡️ Your Fleet</h3>
                         <canvas id="canvas-grid1" width="361" height="361"
-                          >Browser does not support canvas</canvas
+                          >Browser does not support canvas.</canvas
                         >
                       </div>
                       <div class="col-md-6 player-grid text-center">
-                        <h3>Opponent</h3>
+                        <h3>🎯 Enemy Waters</h3>
                         <canvas id="canvas-grid2" width="361" height="361"
-                          >Browser does not support canvas</canvas
+                          >Browser does not support canvas.</canvas
                         >
                       </div>
                     </div>
                   </div>
 
                   <ul class="list-group">
+                    <!-- Status -->
                     <li
                       class="list-group-item text-center"
                       id="turn-status"
                     ></li>
 
-                    <!-- Chat message -->
+                    <!-- Chat messages -->
+                    <li class="list-group-item" id="messages-list">
+                      <ul id="messages"></ul>
+                    </li>
+
+                    <!-- Send chat message form -->
                     <li class="list-group-item">
                       <form id="message-form" action="">
                         <div class="input-group">
@@ -96,6 +107,7 @@
         </div>
       </div>
     </div>
+
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"
@@ -106,7 +118,7 @@
     ></script>
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.8.1/socket.io.js"
     ></script>
     <script type="text/javascript" src="/js/game.js"></script>
     <script type="text/javascript" src="/js/client.js"></script>
